src/snapshots/libwally__resolution__tests__one_dependency_yes_upgrade.snap
---
source: src/resolution.rs
expression: resolved
---
activated:
  - biff/minimal@1.0.0
  - biff/one-dependency@1.0.0
metadata:
  biff/minimal@1.0.0:
    realm: shared
    origin_realms:
      - shared
    source_registry: DefaultRegistry
  biff/one-dependency@1.0.0:
    realm: shared
    origin_realms:
      - shared
    source_registry: DefaultRegistry
shared_dependencies:
  biff/one-dependency@1.0.0:
    Minimal: biff/minimal@1.0.0
server_dependencies: {}
dev_dependencies: {}
