src/snapshots/libwally__resolution__tests__project-3.snap
---
source: src/resolution.rs
expression: resolve
---
activated:
  - biff/root@1.0.0
  - biff/server@1.0.0
  - biff/shared@1.0.0
metadata:
  biff/root@1.0.0:
    realm: shared
    origin_realms:
      - shared
    source_registry: DefaultRegistry
  biff/server@1.0.0:
    realm: server
    origin_realms:
      - server
    source_registry: DefaultRegistry
  biff/shared@1.0.0:
    realm: shared
    origin_realms:
      - server
    source_registry: DefaultRegistry
shared_dependencies: {}
server_dependencies:
  biff/root@1.0.0:
    Server: biff/server@1.0.0
  biff/server@1.0.0:
    Shared: biff/shared@1.0.0
dev_dependencies: {}
