src/snapshots/libwally__resolution__tests__pure_dev_dependency_stays_in_dev.snap
---
source: src/resolution.rs
expression: resolved
---
activated:
  - biff/dev-dep@1.0.0
  - biff/root@1.0.0
  - biff/test-util@1.0.0
metadata:
  biff/dev-dep@1.0.0:
    realm: shared
    origin_realms:
      - dev
    source_registry: DefaultRegistry
  biff/root@1.0.0:
    realm: shared
    origin_realms:
      - shared
    source_registry: DefaultRegistry
  biff/test-util@1.0.0:
    realm: shared
    origin_realms:
      - dev
    source_registry: DefaultRegistry
shared_dependencies: {}
server_dependencies: {}
dev_dependencies:
  biff/dev-dep@1.0.0:
    TestUtil: biff/test-util@1.0.0
  biff/root@1.0.0:
    DevDep: biff/dev-dep@1.0.0
