src/snapshots/libwally__resolution__tests__unified_dependencies.snap
---
source: src/resolution.rs
expression: resolve
---
activated:
  - biff/a@1.0.0
  - biff/b@1.0.0
  - biff/c@1.0.0
  - biff/d@1.0.0
metadata:
  biff/a@1.0.0:
    realm: shared
    origin_realms:
      - shared
    source_registry: DefaultRegistry
  biff/b@1.0.0:
    realm: shared
    origin_realms:
      - shared
    source_registry: DefaultRegistry
  biff/c@1.0.0:
    realm: shared
    origin_realms:
      - shared
    source_registry: DefaultRegistry
  biff/d@1.0.0:
    realm: shared
    origin_realms:
      - shared
    source_registry: DefaultRegistry
shared_dependencies:
  biff/a@1.0.0:
    B: biff/b@1.0.0
    C: biff/c@1.0.0
  biff/b@1.0.0:
    D: biff/d@1.0.0
  biff/c@1.0.0:
    D: biff/d@1.0.0
server_dependencies: {}
dev_dependencies: {}
